--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
                 price: 500,
                 livre: false, 
                 aleatorio: true,
-                description: "Teste sua sorte pegando um valor aleatorio entre 50 e 500."
+                description: "Teste sua sorte pegando um valor aleatório entre 50 e 500. Aqui quem ganha sempre são os noivos 😅"
             },
             { 
                 name: "Cota viagem para o Mexico", 
@@ -490,7 +490,7 @@
                 price: 150, 
                 livre: false, 
                 aleatorio: false,
-                description: "Isso vai ser parte da lua de mel dos noivos."
+                description: "Essa contribuição vai direto para a lua de mel dos noivos no México 🌴🇲🇽"
             },
             { 
                 name: "Habilitação Arrais-Amador e Motonauta", 
@@ -498,183 +498,159 @@
                 price: 1100, 
                 livre: false, 
                 aleatorio: false,
-                description: "Isso aqui é sonho do noivo mas vamos todos usar kkkkkkkkk."
+                description: "Um sonho antigo do noivo… e diversão garantida para todo mundo depois 😎🚤"
             },
             { 
-                name:  "Vinhos para Adega", 
+                name: "Vinhos para Adega", 
                 image: "https://images.unsplash.com/photo-1562601579-599dec564e06", 
-                price: 200, 
+                price: 250, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ainda não temos a adega."
+                description: "Para começar a adega dos sonhos e brindar muitas conquistas 🍷"
             },
             { 
                 name: "Passeio de Barco", 
                 image: "https://images.unsplash.com/photo-1544620347-c4fd4a3d5957", 
-                price: 100, 
+                price: 200, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Um passeio inesquecível para criar memórias a dois 🌊"
             },
             { 
                 name: "Diária no Hotel", 
                 image: "https://images.unsplash.com/photo-1566073771259-6a8506099945", 
-                price: 100, 
+                price: 300, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Uma pausa merecida em algum lugar especial 🏨✨"
             },
             { 
                 name: "Café da Manhã na Cama", 
                 image: "https://images.unsplash.com/photo-1533090161767-e6ffed986c88", 
-                price: 100, 
+                price: 120, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Porque acordar bem acompanhado e com café é outro nível ☕❤️"
             },
             { 
                 name: "Massagem para Casal", 
                 image: "https://images.unsplash.com/photo-1544161515-4ab6ce6db874", 
-                price: 100, 
+                price: 250, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Relaxar juntos depois da correria do casamento 💆‍♂️💆‍♀️"
             },
             { 
                 name: "Kit Casa Nova", 
                 image: "https://images.unsplash.com/photo-1581539250439-c96689b516dd", 
-                price: 100, 
+                price: 300, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Ajuda essencial para deixar a casa com cara de lar 🏡"
             },
             { 
                 name: "Jogo de Panelas", 
-                image: "https://images.unsplash.com/photo-1556910103-1c02745a30bf", 
-                price: 100, 
+                image: "https://images.unsplash.com/photo-1587741011081-d85296fa2b2b", 
+                price: 400, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Para as receitas que ainda vão dar muito certo… e as que não 😅🍳"
             },
             { 
                 name: "Máquina de Café", 
-                image: "https://images.unsplash.com/photo-1520970014086-2208d157c9e2", 
-                price: 100, 
+                image: "https://images.unsplash.com/photo-1512568400610-62da28bc8a13", 
+                price: 450, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Combustível oficial do casal ☕⚡"
             },
             { 
                 name: "Conjunto de Toalhas", 
-                image: "https://images.unsplash.com/photo-1579621970563-ebec7560eb3e", 
-                price: 100, 
+                image: "https://images.unsplash.com/photo-1523471826770-c437b4636fe6", 
+                price: 180, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Toalhas novas para uma nova fase 🛁"
             },
             { 
                 name: "Roupa de Cama", 
-                image: "https://images.unsplash.com/photo-1522771753037-633361652bff", 
-                price: 100, 
+                image: "https://images.unsplash.com/photo-1564019472231-4586c552dc27", 
+                price: 220, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Conforto garantido para boas noites de sono 😴"
             },
             { 
                 name: "Aparelho de Jantar", 
                 image: "https://images.unsplash.com/photo-1620706857370-e1b9770e8bb1", 
-                price: 100, 
+                price: 350, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Para receber amigos e família em grande estilo 🍽️"
             },
             { 
                 name: "Faqueiro Inox", 
                 image: "https://images.unsplash.com/photo-1584269600519-112d071b35e6", 
-                price: 100, 
+                price: 200, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
-            },
-            { 
-                name: "Liquidificador Turbo", 
-                image: "https://images.unsplash.com/photo-1574966739987-65e38a0b0d3e", 
-                price: 100, 
-                livre: false, 
-                aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
-            },
-            { 
-                name: "Batedeira Planetária", 
-                image: "https://images.unsplash.com/photo-1578643463396-0997cb5328c1", 
-                price: 100, 
-                livre: false, 
-                aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Porque comer bem começa pelos detalhes ✨"
             },
             { 
                 name: "Aspirador Robô", 
-                image: "https://images.unsplash.com/photo-1557821552-17105176677c", 
-                price: 100, 
+                image: "https://plus.unsplash.com/premium_photo-1729006559482-d289e4385b1e", 
+                price: 600, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
-            },
-            { 
-                name: "Alexa Echo Dot", 
-                image: "https://images.unsplash.com/photo-1543512214-318c77a790d3", 
-                price: 100, 
-                livre: false, 
-                aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Menos limpeza, mais tempo juntos 🤖"
             },
             { 
                 name: "Kit Churrasco", 
-                image: "https://images.unsplash.com/photo-1555939594-58d7cb561ad1", 
-                price: 100, 
+                image: "https://images.unsplash.com/photo-1504564321107-4aa3efddb5bd", 
+                price: 350, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Churrasco liberado na casa nova 🔥🥩"
             },
             { 
                 name: "Adega de Vinhos", 
                 image: "https://images.unsplash.com/photo-1506377247377-2a5b3b417ebb", 
-                price: 100, 
+                price: 700, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Para guardar vinhos… se resistirem a beber antes 🍷"
             },
             { 
                 name: "Decoração para Sala", 
                 image: "https://images.unsplash.com/photo-1513519245088-0e12902e5a38", 
-                price: 100, 
+                price: 250, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Deixar o cantinho do casal com a cara deles 🖼️"
             },
             { 
                 name: "Quadros Decorativos", 
                 image: "https://images.unsplash.com/photo-1579762715118-a6f1d4b934f1", 
-                price: 100, 
+                price: 180, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Detalhes que contam histórias 🎨"
             },
             { 
                 name: "Tapete para Sala", 
-                image: "https://images.unsplash.com/photo-1586023492125-27b2c045efd7", 
-                price: 100, 
+                image: "/public/home.jpeg", 
+                price: 300, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Conforto e estilo para o dia a dia 🏡"
             },
             { 
                 name: "Almofadas Personalizadas", 
-                image: "https://images.unsplash.com/photo-1584100936595-c0654b55a2e6", 
-                price: 100, 
+                image: "/public/almofada.jpeg", 
+                price: 150, 
                 livre: false, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Porque até o sofá merece carinho 🛋️"
             },
             { 
                 name: "Contribuição Livre", 
@@ -682,7 +658,7 @@
                 price: 100, 
                 livre: true, 
                 aleatorio: false,
-                description: "Ajude os noivos a realizarem este sonho."
+                description: "Contribua com o valor que fizer sentido para você 💖"
             }
         ];
 
@@ -714,7 +690,7 @@
         function renderGifts() {
             const container = document.getElementById('gift-grid-container');
             let html = '';
-            for(let i=0; i < 25; i++) {
+            for(let i=0; i < gifts.length; i++) {
                 const title = gifts[i].name || `Presente ${i+1}`;
                 const price = gifts[i].aleatorio ? Math.floor(Math.random() * (500 - 50 + 1) + 50) : gifts[i].price;
                 const img = (gifts[i].image || "https://images.unsplash.com/photo-1513885535751-8b9238bd345a") + "?q=80&w=400&h=300&auto=format&fit=crop";
