fix: update image paths to remove leading slashes for consistency

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casamento Augusto & Carolini</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="/public/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/public/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/public/favicon-16x16.png">
-    <link rel="manifest" href="/public/site.webmanifest">
+    <link rel="apple-touch-icon" sizes="180x180" href="public/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="public/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="public/favicon-16x16.png">
+    <link rel="manifest" href="public/site.webmanifest">
     
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -142,7 +142,7 @@
             <!-- Hero Section -->
             <div class="relative h-[85vh] w-full overflow-hidden">
                 <div class="absolute inset-0 bg-cover bg-center bg-no-repeat transform hover:scale-105 transition-transform duration-[40s]"
-                     style="background-image: url('/public/6.jpg')">
+                     style="background-image: url('public/6.jpg')">
                 </div>
                 <div class="absolute inset-0 bg-black/20 flex flex-col items-center justify-center text-white text-center p-4">
                     <div class="animate-fade-in p-10 md:p-16 rounded-sm  max-w-3xl">
@@ -190,7 +190,7 @@
                     <div class="grid grid-cols-1 md:grid-cols-4 gap-4 auto-rows-[250px] p-4 bg-rustic-50 rounded-sm">
                         <!-- Foto 1 -->
                         <div class="relative overflow-hidden rounded-sm shadow-sm hover:shadow-xl transition-all duration-700 group cursor-pointer md:col-span-2 md:row-span-2">
-                            <img src="/public/1.jpg" class="w-full h-full object-cover img-vintage" alt="Casal">
+                            <img src="public/1.jpg" class="w-full h-full object-cover img-vintage" alt="Casal">
                             <div class="absolute inset-0 bg-rustic-900/40 opacity-0 group-hover:opacity-100 transition-opacity duration-500 flex items-center justify-center">
                                 <div class="border border-white/50 p-4 bg-black/20 backdrop-blur-sm">
                                     <p class="text-white font-serif italic text-lg flex items-center gap-2"><i data-lucide="heart" class="w-4 h-4 text-white fill-white"></i> Nossos melhores dias</p>
@@ -200,21 +200,21 @@
 
                         <!-- Foto 2 -->
                         <div class="relative overflow-hidden rounded-sm shadow-sm hover:shadow-xl transition-all duration-700 group cursor-pointer md:col-span-1 md:row-span-1">
-                            <img src="/public/2.JPG" class="w-full h-full object-cover img-vintage" alt="Abraço">
+                            <img src="public/2.JPG" class="w-full h-full object-cover img-vintage" alt="Abraço">
                         </div>
 
                          <!-- Foto 3 -->
                          <div class="relative overflow-hidden rounded-sm shadow-sm hover:shadow-xl transition-all duration-700 group cursor-pointer md:col-span-1 md:row-span-2">
-                            <img src="/public/3.jpg" class="w-full h-full object-cover img-vintage" alt="Celebração">
+                            <img src="public/3.jpg" class="w-full h-full object-cover img-vintage" alt="Celebração">
                         </div>
 
                         <!-- Foto 4 -->
                         <div class="relative overflow-hidden rounded-sm shadow-sm hover:shadow-xl transition-all duration-700 group cursor-pointer md:col-span-1 md:row-span-1">
-                            <img src="/public/4.jpg" class="w-full h-full object-cover img-vintage" alt="Selfie">
+                            <img src="public/4.jpg" class="w-full h-full object-cover img-vintage" alt="Selfie">
                         </div>
                          <!-- Foto 5 -->
                          <div class="relative overflow-hidden rounded-sm shadow-sm hover:shadow-xl transition-all duration-700 group cursor-pointer md:col-span-1 md:row-span-1">
-                            <img src="/public/5.jpg" class="w-full h-full object-cover img-vintage" alt="Sorrisos">
+                            <img src="public/5.jpg" class="w-full h-full object-cover img-vintage" alt="Sorrisos">
                         </div>
                     </div>
                 </div>
@@ -478,7 +478,7 @@
         const gifts = [
             { 
                 name: "Tigrinho, só que nesse caso só é bom para os noivos", 
-                image: "/public/fortune-tiger.png", 
+                image: "public/fortune-tiger.png", 
                 price: 500,
                 livre: false, 
                 aleatorio: true,
@@ -638,7 +638,7 @@
             },
             { 
                 name: "Tapete para Sala", 
-                image: "/public/home.jpeg", 
+                image: "public/home.jpeg", 
                 price: 300, 
                 livre: false, 
                 aleatorio: false,
@@ -646,7 +646,7 @@
             },
             { 
                 name: "Almofadas Personalizadas", 
-                image: "/public/almofada.jpeg", 
+                image: "public/almofada.jpeg", 
                 price: 150, 
                 livre: false, 
                 aleatorio: false,
