feat: add confetti effect on payment modal open

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
 
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
+
     <!-- Configuração do Tema -->
     <script>
       tailwind.config = {
@@ -775,6 +777,17 @@
             
             document.getElementById('payment-modal').classList.remove('hidden');
             lucide.createIcons();
+
+            gerarConfetti()
+        }
+
+        function gerarConfetti() {
+            confetti({
+                particleCount: 400,
+                spread: 100,
+                scalar: 2,
+                origin: { y: 0.6 }
+            });
         }
 
         function closeModal() {
