feat: preload main image for improved loading performance

--- a/index.html
+++ b/index.html
@@ -105,6 +105,9 @@
             transform: scale(1.05);
         }
     </style>
+
+    <link rel="preload" as="image" href="public/IMG_1.JPG">
+
 </head>
 <body class="bg-rustic-50 text-rustic-900 font-sans antialiased selection:bg-rustic-200 selection:text-rustic-800">
 
