feat: add Open Graph meta tags for improved social sharing

--- a/index.html
+++ b/index.html
@@ -108,6 +108,16 @@
 
     <link rel="preload" as="image" href="public/IMG_1.jpg">
 
+    <!-- meta descriptions -->
+    <meta name="description" content="Junte-se a nós para celebrar o amor">
+    
+    <!-- facebook metadados -->
+    <meta property="og:title" content="Casamento Augusto & Carolini">
+    <meta property="og:description" content="Junte-se a nós para celebrar o amor">
+    <meta property="og:image" content="public/IMG_1.jpg">
+    <meta property="og:type" content="website">
+
+
 </head>
 <body class="bg-rustic-50 text-rustic-900 font-sans antialiased selection:bg-rustic-200 selection:text-rustic-800">
 
