feat: enhance Open Graph meta tags for improved social sharing

--- a/index.html
+++ b/index.html
@@ -114,7 +114,13 @@
     <!-- facebook metadados -->
     <meta property="og:title" content="Casamento Augusto & Carolini">
     <meta property="og:description" content="Junte-se a nós para celebrar o amor">
-    <meta property="og:image" content="public/IMG_1.jpg">
+    <meta property="og:url" content="https://augusto-carolini.com/">
+    <meta property="og:image" content="https://augusto-carolini.com/public/IMG_1.jpg">
+    <meta property="og:image:secure_url" content="https://augusto-carolini.com/public/IMG_1.jpg" />
+    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:width" content="4000" />
+    <meta property="og:image:height" content="6000" />
+    <meta property="og:image:alt" content="Augusto e Carolini" />
     <meta property="og:type" content="website">
 
 
