--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
     <meta property="og:url" content="https://augusto-carolini.com/">
     <meta property="og:image" content="https://augusto-carolini.com/public/IMG_1.jpg">
     <meta property="og:image:secure_url" content="https://augusto-carolini.com/public/IMG_1.jpg" />
-    <meta property="og:image:type" content="image/jpeg" />
+    <meta property="og:image:type" content="image/jpg" />
     <meta property="og:image:width" content="4000" />
     <meta property="og:image:height" content="6000" />
     <meta property="og:image:alt" content="Augusto e Carolini" />
