--- a/index.html
+++ b/index.html
@@ -115,14 +115,13 @@
     <meta property="og:title" content="Casamento Augusto & Carolini">
     <meta property="og:description" content="Junte-se a nós para celebrar o amor">
     <meta property="og:url" content="https://augusto-carolini.com/">
-    <meta property="og:image" content="https://augusto-carolini.com/public/IMG_1.jpg">
-    <meta property="og:image:secure_url" content="https://augusto-carolini.com/public/IMG_1.jpg" />
+    <meta property="og:image" content="https://augusto-carolini.com/public/og-image.jpg">
+    <meta property="og:image:secure_url" content="https://augusto-carolini.com/public/og-image.jpg" />
     <meta property="og:image:type" content="image/jpg" />
-    <meta property="og:image:width" content="4000" />
-    <meta property="og:image:height" content="6000" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="200" />
     <meta property="og:image:alt" content="Augusto e Carolini" />
     <meta property="og:type" content="website">
-
 
 </head>
 <body class="bg-rustic-50 text-rustic-900 font-sans antialiased selection:bg-rustic-200 selection:text-rustic-800">
