feat: enhance HTML meta tags for improved social sharing on Facebook and Twitter

--- a/index.html
+++ b/index.html
@@ -108,17 +108,27 @@
 
     <link rel="preload" as="image" href="public/IMG_1.jpg">
 
-    <!-- meta descriptions -->
-    <meta name="description" content="Junte-se a nós para celebrar o amor">
-    
-    <!-- facebook metadados -->
-    <meta property="og:title" content="Casamento Augusto & Carolini" />
-    <meta property="og:description" content="Junte-se a nós para celebrar o amor" />
+    <!-- HTML Meta Tags -->
+    <title>Casamento Augusto &amp; Carolini</title>
+    <meta name="description" content="Junte-se a nós para celebrar o amor" />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Casamento Augusto &amp; Carolini" />
+    <meta itemprop="description" content="Junte-se a nós para celebrar o amor" />
+    <meta itemprop="image" content="https://augusto-carolini.com/public/og-image.jpg" />
+
+    <!-- Facebook Meta Tags -->
     <meta property="og:url" content="https://augusto-carolini.com/" />
-    <meta property="og:image" content="https://augusto-carolini.com/public/og-image.jpg" />
-    <meta property="og:image:secure_url" content="https://augusto-carolini.com/public/og-image.jpg" />
-    <meta property="og:image:alt" content="Augusto e Carolini" />
     <meta property="og:type" content="website" />
+    <meta property="og:title" content="Casamento Augusto &amp; Carolini" />
+    <meta property="og:description" content="Junte-se a nós para celebrar o amor" />
+    <meta property="og:image" content="https://augusto-carolini.com/public/og-image.jpg" />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Casamento Augusto &amp; Carolini" />
+    <meta name="twitter:description" content="Junte-se a nós para celebrar o amor" />
+    <meta name="twitter:image" content="https://augusto-carolini.com/public/og-image.jpg" />
 
 </head>
 <body class="bg-rustic-50 text-rustic-900 font-sans antialiased selection:bg-rustic-200 selection:text-rustic-800">
